📝 update api specs
